// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Keyring Derives correct keys from seed 1`] = `
Object {
  "content": Object {
    "publicKeys": Object {
      "PpEHx9GhyFT5Env": "zQ3shnyMbHDVqqJnm6EiPJ47Vc4ivUFgcaPpEHx9GhyFT5Env",
      "suxjL1MxhcRFYkG": "z6DtSycrUdhF2Cv9vQP9GoTVsbjUsSuj5suxjL1MxhcRFYkG",
    },
  },
  "metadata": Object {
    "isUnique": false,
    "owners": Array [
      "did:key:zQ3shjdQdzyD4TLGhSrGZenUjS3TnhwqWowkqKqi2J8sMgGy6",
    ],
    "tags": Array [
      "3id",
    ],
  },
}
`;

exports[`Keyring Derives correct keys from seed 2`] = `
Object {
  "content": Object {
    "publicKeys": Object {
      "PpEHx9GhyFT5Env": "zQ3shnyMbHDVqqJnm6EiPJ47Vc4ivUFgcaPpEHx9GhyFT5Env",
      "suxjL1MxhcRFYkG": "z6DtSycrUdhF2Cv9vQP9GoTVsbjUsSuj5suxjL1MxhcRFYkG",
    },
  },
  "metadata": Object {
    "owners": Array [
      "did:key:zQ3shjdQdzyD4TLGhSrGZenUjS3TnhwqWowkqKqi2J8sMgGy6",
    ],
  },
}
`;

exports[`Keyring Derives correct keys from seed 3`] = `
Uint8Array [
  77,
  18,
  225,
  143,
  155,
  176,
  47,
  185,
  247,
  228,
  117,
  64,
  200,
  168,
  40,
  10,
  160,
  46,
  113,
  26,
  139,
  93,
  200,
  71,
  107,
  247,
  97,
  122,
  195,
  166,
  57,
  57,
]
`;

exports[`Keyring Derives correct keys from seed 4`] = `
Uint8Array [
  240,
  228,
  194,
  247,
  108,
  88,
  145,
  110,
  194,
  88,
  242,
  70,
  133,
  27,
  234,
  9,
  29,
  20,
  212,
  36,
  122,
  47,
  195,
  225,
  134,
  148,
  70,
  27,
  24,
  22,
  225,
  59,
]
`;
